parse/internal/parser/testdata/failing/eos-not-at-end.trunnel
struct misplaced_eos {
  u8 x;
  eos;
  u8 y;
};
